--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -5,4 +5,7 @@
   </div>
 
   <%= render "form", order: @order, users: @users, button_text: "オーダーを更新" %>
+  
+  <!-- Chat Section -->
+  <%= render "shared/order_chat", order: @order %>
 </div>
