--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -58,7 +58,7 @@
           </div>
 
           <div>
-            <span class="font-semibold text-gray-600">推定納期:</span>
+            <span class="font-semibold text-gray-600">ETD:</span>
             <span class="ml-2">
               <%= @order.estimate_delivery_date&.strftime("%Y年%m月%d日") || "未定" %>
             </span>
